# parse-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  README_cn.md  build.rs  pyproject.toml  python_compat.py
benches/: benchmark.py  benchmark_common.py  benchmark_fallback_throughput.py  benchmark_findall_throughput.py  benchmark_parse_latency.py  benchmark_parse_throughput.py  benchmark_search_throughput.py
docs/: design.md  p0-patch-summary.md
src/: compiler.rs  lib.rs  parser.rs  result.rs  types.rs
tests/: test_bugs.py  test_findall.py  test_integration.py  test_parse.py  test_parsetype.py  test_python_api_integration.py  test_security_inputs.py
