[package]
name = "parse-rust"
version = "0.1.0"
edition = "2021"
description = "A Rust rewrite of Python's parse library - the opposite of format()"
license = "MIT"
repository = "https://github.com/user/parse-rust"

[lib]
name = "parse_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
regex = "1"
once_cell = "1"
chrono = "0.4"

[dev-dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }

[profile.release]
opt-level = 3
lto = true
